--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@lucide/lab": "^0.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.2.1",
@@ -22,6 +23,7 @@
     "expo-blur": "~14.1.3",
     "expo-camera": "~16.1.5",
     "expo-constants": "~17.1.3",
+    "expo-document-picker": "^13.1.5",
     "expo-font": "~13.2.2",
     "expo-haptics": "~14.1.3",
     "expo-linear-gradient": "~14.1.3",
@@ -47,13 +49,15 @@
     "react-native-webview": "13.13.5",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@testing-library/react-native": "^12.4.3",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
+    "@types/xlsx": "^0.0.35",
     "jest": "^29.7.0",
     "jest-expo": "^50.0.2",
     "msw": "^2.2.1",
