--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "jest": "^29.7.0",
     "jest-expo": "^50.0.2",
     "msw": "^2.2.1",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~9.2.0"
   },
   "jest": {
     "preset": "jest-expo",
