--- a/package.json
+++ b/package.json
@@ -60,12 +60,12 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
     "@types/xlsx": "^0.0.35",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~9.2.0",
     "jest": "^29.7.0",
     "jest-expo": "^50.0.2",
     "msw": "^2.2.1",
-    "typescript": "~5.8.3",
-    "eslint": "^9.0.0",
-    "eslint-config-expo": "~9.2.0"
+    "typescript": "~5.8.3"
   },
   "jest": {
     "preset": "jest-expo",
