--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.2.1",
+    "ajv": "^8",
+    "ajv-keywords": "^5.1.0",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.13",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^53.0.0",
     "expo-blur": "~14.1.3",
     "expo-camera": "~16.1.5",
@@ -40,7 +43,9 @@
     "react-dom": "19.0.0",
     "react-native": "^0.79.1",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.14.1",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
