--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "expo-document-picker": "^13.1.5",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.3",
-    "expo-linear-gradient": "~14.1.3",
+    "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.3",
     "expo-router": "~5.0.2",
     "expo-splash-screen": "~0.30.6",
@@ -44,6 +44,7 @@
     "react-icons": "^5.5.0",
     "react-native": "^0.79.1",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.14.1",
     "react-native-picker-select": "^9.3.1",
